@@ -1,0 +1,6 @@
+Processing test75...
+
+Warnings...
+
+test_input/test75.py:5: Using __slots__ in classic class A is not used by Python
+test_input/test75.py:13: __slots__ are empty in C
