@@ -1,6 +1,8 @@
 Version 0.8.8   - xx January 2002
-  * Add -0/--abstract option to warn that subclass should override a base
-    method that only raises exceptions
+  * Add -0/--abstract option to warn that subclass should override
+        a base class whose method(s) only raise exceptions
+  * Add -7/--slots option to warn about __slots__ usage problems
+  * Add --emptyslots option to warn about empty __slots__
   * Add check if __getattr[ibute]__ returns None, should raise an exception
   * Allow pychecker to be imported (in your code do: import pychecker.check)
   * Using vars() for format string argument works like locals()
